fix column alignment and show "-" when no data is present for a log key

--- a/client/my-sites/site-logs/components/site-logs-table/style.scss
+++ b/client/my-sites/site-logs/components/site-logs-table/style.scss
@@ -47,6 +47,7 @@ tr.site-logs-table__table-row-expanded {
 	background: var(--studio-gray-0) !important;
 	td {
 		border-top: none;
+		vertical-align: top;
 	}
 }
 
